fixing alignment of stats div.

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -500,7 +500,7 @@
 		padding:5px;
 		font-size:14px;
 		color:#585858;
-		display: inline-block;
+		display: block;
 	}
 	.lesson{
 		position:relative;
